# Discord-Multipurpose-Bot-V4

./: afk.json  anti.json  autoresponse.json  badges.json  blacklist.json  config.json  database1.json  events.json  giveaways.json  ignore.json  info.json  logs.json  main.py  pyproject.toml  replit_zip_error_log.txt  vanityroles.json  verification.json
.github/: dependabot.yml
cogs/: __init__.py
cogs/commands/: Games.py  Nsfw2.py  Verification.py  Verification1.py  afk.py  anti.py  anti1.py  autoresponder1.py  extra.py  extra1.py  fun.py  fun1.py  games1.py  general.py  general1.py  giveaway.py  giveaway1.py  giveaway_task.py  help.py  ignore.py  logging.py  logging1.py  mod2.py  moderation.py  music.py  music1.py  nsfw.py  owner.py  raidmode.py  raidmode1.py  role.py  server.py  ticket.py  ticket1.py  vanityroles.py  vanityroles1.py  vcrole.py  vcrole1.py  vcroles.py  voice.py  (+2 more)
cogs/events/: Errors.py  antiban.py  antibot.py  antichannel.py  antiemojid.py  antiemojiu.py  antiemostick.py  antiguild.py  antikick.py  antintegration.py  antiping.py  antiprune.py  antirole.py  antispam.py  antiwebhook.py  autoblacklist.py  autorole.py  greet2.py  member_update.py  on_guild.py  voiceupdate.py
core/: Astroz.py
giveaway_users/: general.txt  ticekts.txt
utils/: Tools.py  config.py  help.py  paginator.py  paginators.py
